--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,4 +1,10 @@
   /* home */
+
+  :root {
+  --vh: 1vh;
+  --safe-area-inset-bottom: env(safe-area-inset-bottom, 0px);
+}
+
   .home-page {
     height: 100vh;
     background-color: #101010;
@@ -19,6 +25,7 @@
     color: #ffffff;
     padding-left: 200px;
     margin-top: -23px;
+    height: 100dvh; /* Динамическая высота viewport */
   }
 
   @media (max-width: 768px) {
@@ -30,8 +37,8 @@
 
 @media (max-width: 480px) {
   .vertical-text-container {
-    font-size: 80px;
-    padding-left: 25px;
+    font-size: 68px;
+    padding-left: 60px;
   }
 }
 
@@ -141,10 +148,21 @@
   }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 440px) {
   .sidebar-image {
     width: 100vw;
-    top: 35%;
+    top: 25%;
+  }
+
+  .sidebar-image img {
+    max-width: 1000px;
+  }
+}
+
+@media (min-width: 440px) and (max-width: 480px) {
+  .sidebar-image {
+    width: 100vw;
+    top: 30%;
   }
 
   .sidebar-image img {
@@ -159,6 +177,7 @@
 
   .catalog-container {
     will-change: left;
+    height: 100dvh; /* Динамическая высота viewport */
   } 
 
   .catalog-content {
@@ -173,6 +192,7 @@
     flex-direction: column;
     z-index: 8;
     overflow: hidden;
+    height: 100dvh; /* Динамическая высота viewport */
   }
 
   .catalog-title-container{
@@ -437,10 +457,11 @@
     40% { opacity: 0; }
   }
 
-  @media (max-width: 450px) {
+  @media (max-width: 440px) {
 
   .catalog-content {
     padding: 1rem 0rem 1rem 3rem;
+    height: calc(100dvh - 2rem + 1px);
   }
 
   .catalog-footer {
@@ -513,16 +534,132 @@
   
   .catalog-title{
     font-size: 2.5rem;
-    letter-spacing: -2px;
+    letter-spacing: -3px;
  }
 
   .catalog-title-outline {
     font-size: 2.5rem;
-    letter-spacing: -2px;
+    letter-spacing: -3px;
   }
 
   .projects-list {
-    gap: 2rem;
+    gap: 0.7rem;
+    letter-spacing: -3px;
+  }
+
+  .project-item-container {
+    bottom: 4rem;
+  }
+  
+  .project-item {
+    font-size: 3.2rem;
+  }
+
+  .project-item-container::after {
+    width: 38px;
+    height: 8px;
+  }
+
+  .catalog-title::after {
+    width: 36px;
+    height: 8px;
+    margin-top: 45px;
+  }
+  
+  .project-item-outline {
+    font-size: 3.2rem;
+  }
+}
+
+@media (min-width: 440px) and (max-width: 480px) {
+
+  .catalog-content {
+    padding: 1rem 0rem 1rem 3rem;
+    height: calc(100dvh - 2rem + 1px);
+  }
+
+  .catalog-footer {
+    bottom: 0;
+    left: 0;
+    right: 0;
+    top: auto;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 1rem 0rem 0rem 1rem;
+    width: 100%;
+    height: auto;
+    max-width: 1000px;
+    gap: 0;
+    display: flex;
+  }
+
+  .footer-logo-block {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    max-width: 50%;
+    margin-left: 40px;
+  }
+
+  .footer-logo {
+    width: 180px;
+    height: auto;
+    margin-left: -1rem;
+    object-fit: contain;
+    margin-bottom: 1.5rem;
+  }
+
+  .footer-label {
+    font-size: 1.2rem;
+    margin-top: 0;
+    position: relative;
+    bottom: 30px;
+  }
+
+  .footer-meta {
+    font-size: 0.6rem;
+    text-align: left;
+    margin-top: 0;
+    position: relative;
+    bottom: 30px;
+    width: auto;
+    padding-bottom: 0;
+  }
+
+  .footer-links {
+    display: flex;
+    flex-direction: column;
+    gap: 0.6rem;
+    width: 60%;
+    max-width: 250px;
+    box-sizing: border-box;
+    margin-top: 1rem;
+    margin-left: 0;
+  }
+
+  .footer-link {
+    font-size: 1.25rem;
+    margin-left: -1rem;
+  }
+    
+  .catalog-title-container{
+    bottom: 2rem;
+ }
+  
+  .catalog-title{
+    font-size: 2.8rem;
+    letter-spacing: -3px;
+ }
+
+  .catalog-title-outline {
+    font-size: 2.8rem;
+    letter-spacing: -3px;
+  }
+
+  .projects-list {
+    gap: 1rem;
+    letter-spacing: -3px;
   }
 
   .project-item-container {
@@ -530,18 +667,30 @@
   }
   
   .project-item {
-    font-size: 3.5rem;
+    font-size: 3.4rem;
+  }
+
+  .project-item-container::after {
+    width: 38px;
+    height: 8px;
+  }
+
+  .catalog-title::after {
+    width: 36px;
+    height: 8px;
+    margin-top: 45px;
   }
   
   .project-item-outline {
-    font-size: 3.5rem;
+    font-size: 3.2rem;
   }
 }
 
-@media (min-width: 451px) and (max-width: 768px) {
+@media (min-width: 481px) and (max-width: 768px) {
 
   .catalog-content {
     padding: 1rem 0rem 1rem 5rem;
+    height: calc(100dvh - 2rem + 1px);
   }
 
   .catalog-footer {
