--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -199,7 +199,7 @@
 
 @media (min-width: 768px) {
   .container {
-    height: 5700px;
+    height: 5820px;
     position: relative;
   }
 
@@ -477,27 +477,27 @@
 
 @media (min-width: 768px) {
   .about-info-section {
-    padding: 2rem 28rem;
+    padding: 2rem 16rem 0rem 28rem;
     gap: 4rem;
   }
 
   .info-column {
-    gap: 0.5rem;
+    gap: 0.1rem;
   }
 
   .info-column h5 {
-    font-size: 1.7rem;
+    font-size: 1.6rem;
     margin: 0 0 0rem;
-    margin-left: -110px;
+    margin-left: -100px;
   }
 
   .align-title {
-    font-size: 1.7rem;
+    font-size: 1.6rem;
     right: 20px;
   }
 
   .info-block h4 {
-    font-size: 1.3rem;
+    font-size: 1.2rem;
   }
 
   .info-block p {
@@ -890,11 +890,11 @@
 @media (min-width: 768px) {
   .vertical-text-container-reviews-about {
     gap: 370px;
-    padding: 30rem 0rem;
+    padding: 55rem 6rem;  
   }
 
   .reviews-section {
-    gap: 7rem;
+    gap: 5rem;
     padding: 2rem 0rem;
     margin-left: -115rem;
   }
@@ -920,7 +920,7 @@
   }
 
   .review-name {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     font-weight: 700;
     margin: 0;
   }
@@ -1191,12 +1191,12 @@
 @media (min-width: 768px) {
   .vertical-text-container-price-about {
     gap: 200px;
-    padding: 36rem 0rem;
+    padding: 41.5rem 7rem;
   }
 
   .block-3-content {
     max-width: 800px;
-    padding: 1rem 4rem;
+    padding: 1rem 1rem;
   }
 
   .block-3-text {
@@ -1219,7 +1219,7 @@
   }
 
   .block-3-paragraph {
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     width: 100%;
     min-width: 500px;
   }
@@ -1230,7 +1230,7 @@
   }
 
   .block-3-subtitle {
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     font-weight: 600;
     margin-bottom: 0.5rem;
   }
@@ -1238,7 +1238,7 @@
   .block-3-ul {
     list-style-type: '·  ';
     padding-left: 1.2rem;
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     gap: 0.5rem;
     line-height: 1.2;
     width: 100%;
@@ -1651,7 +1651,7 @@
 @media (min-width: 768px) {
   .vertical-text-container-order-about {
   gap: 690px;
-  padding: 3rem 0rem;
+  padding: 11rem 3rem;
 }
 
 .vertical-text-order-about {
@@ -1659,7 +1659,7 @@
 }
 
 .telegram-contact-section {
-  padding: 1rem 10rem;
+  padding: 1rem 9rem;
   margin-top: -50px;
 }
 
@@ -1672,7 +1672,7 @@
 }
 
 .telegram-text-top {
-  font-size: 2.5rem;
+  font-size: 2rem;
 }
 
 .telegram-text-bottom {
@@ -1689,7 +1689,7 @@
 }
 
 .telegram-description {
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   line-height: 1.4;
   width: 100%;
   max-width: 700px;
@@ -1698,7 +1698,7 @@
 .where-site-block {
   height: 220px;
   width: 100vw;
-  margin-left: -37rem;
+  margin-left: -38rem;
 }
 
 .where-site-text {
