--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -431,14 +431,19 @@
   }
   
   .project-item-container:hover::after {
+    border-color: var(--hover-color);
     background-color: var(--hover-color);
-    border-color: var(--hover-color);  
-    animation: blink 1.7s infinite;
+    box-shadow:
+      0 0 0px var(--hover-color);
+    transition: box-shadow 0.6s ease, background-color 0.6s ease;
+  
   }
 
   .project-item-container:hover .project-item {
+    text-shadow:
+    0 0 0px var(--hover-color);
     color: var(--hover-color);
-    transition: color 0.3s ease;
+    transition: text-shadow 0.6s ease, color 0.6s ease;
   }
 
   .project-item-container.auto-hovered::after {
