--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -70,10 +70,10 @@
 .mobile-description {
   font-size: 1rem;
   text-align: left;
-  line-height: 1.6;
+  line-height: 1.2;
   font-family: 'g';
   width: 100%;
-  max-width: 350px;
+  max-width: 340px;
   padding: 1rem 0.5rem;
 }
 
@@ -86,8 +86,7 @@
   text-shadow:
     0 0 5px #d6f0ff,
     0 0 10px #cbefff,
-    0 0 20px #c2e7ff,
-    0 0 40px #507ba3;
+    0 0 20px #5062a3;
   font-family: 'g';
   letter-spacing: 0.02em;
   width: 100%;
@@ -404,7 +403,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  padding: 0rem 0.5rem;
+  padding: 0rem 1rem;
   color: white;
   gap: 2rem;
 }
@@ -416,10 +415,11 @@
 }
 
 .mobile-info-column h5 {
-  font-size: 1.3rem;
+  font-size: 1.1rem;
   font-family: 'g';
-  font-weight: 600;
-  margin: 0 0 0.5rem;
+  font-weight: 900;
+  margin: 0 0 1rem;
+  text-align: center;
 }
 
 .mobile-info-block {
@@ -427,14 +427,14 @@
   align-items: flex-start;
   gap: 0.5rem;
   width: 100%;
-  max-width: 330px;
+  max-width: 320px;
 }
 
 .mobile-info-block h4 {
-  font-size: 1.1rem;
+  font-size: 1rem;
   font-family: 'g';
-  font-weight: 600;
-  margin: 0 0 0.2rem;
+  font-weight: 900;
+  margin: 0 0 0.3rem;
 }
 
 .mobile-info-block p {
@@ -442,7 +442,7 @@
   font-family: 'g';
   font-weight: 200;
   line-height: 1.2;
-  margin: 0;
+  margin: 0 auto;
 }
 
 .mobile-info-icon {
@@ -450,17 +450,17 @@
   height: 45px;
   flex-shrink: 0;
   filter: brightness(0) invert(1);
-  margin-top: 0.4rem;
+  margin-top: 0.6rem;
 }
 
 .mobile-question-column {
   position: absolute;
   top: 0;
-  right: 0.5rem;
+  right: 1rem;
   display: flex;
   flex-direction: column;
   font-size: 4rem;
-  color: rgba(255, 255, 255, 0.25);
+  color: rgba(255, 255, 255, 0.5);
   font-family: 'NauryzRedKeds';
   pointer-events: none;
 }
@@ -1148,7 +1148,7 @@
     0 0 5px #d6f0ff,
     0 0 10px #cbefff,
     0 0 20px #c2e7ff,
-    0 0 40px #507ba3;
+    0 0 20px #507ba3;
   margin-bottom: 1rem;
   padding: 1rem 0;
 }
@@ -1156,7 +1156,7 @@
 .mobile-text-content {
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
+  gap: 2.5rem;
 }
 
 .mobile-block-3-paragraph {
@@ -1169,7 +1169,7 @@
 .mobile-block-3-list {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0rem;
 }
 
 .mobile-block-3-subtitle {
@@ -1185,7 +1185,7 @@
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-  line-height: 1.5;
+  line-height: 1.6;
 }
 
 @media (min-width: 768px) {
@@ -1568,7 +1568,6 @@
   flex-direction: column;
   color: white;
   font-family: 'g';
-  padding: 0rem 0rem;
   gap: 1rem;
 }
 
@@ -1576,7 +1575,7 @@
   display: flex;
   flex-direction: column;
   gap: 3rem;
-  padding: 3rem  0.5rem 0rem 0.5rem;
+  padding: 3rem  1.5rem 0rem 1.5rem;
 }
 
 .mobile-telegram-text-block {
@@ -1586,14 +1585,14 @@
 }
 
 .mobile-telegram-text-top {
-  font-size: 1.4rem;
+  font-size: 1.3rem;
   font-weight: 900;
   line-height: 1;
   margin: 0;
 }
 
 .mobile-telegram-text-bottom {
-  font-size: 1.4rem;
+  font-size: 1.3rem;
   font-weight: 900;
   line-height: 1;
   margin: 0;
